--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <div id="headerPlace"> HEADER PLACE HOLDER</div>
 </head>
 <body>
-    <div> 
+    <div id="firstSection"> 
     <h1 id="hometitle">CARD CRAFT STUDIO</h1>
+    <img
     </div>
 
 
