updated home page

--- a/index.html
+++ b/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Card Craft Studio</title>
-    <div id="headerPlace"> HEADER PLACE HOLDER</div>
+    <title>CardCraft Studio</title>
 </head>
 <body>
-    <div id="firstSection"> 
-    <h1 id="hometitle">CARD CRAFT STUDIO</h1>
-    <img
+    <div id="headerPlace">HEADER PLACE HOLDER</div>
+
+    <!-- Main Section -->
+    <div id="firstSection">
+        <h1>CARDCRAFT STUDIO</h1>
+        <div id="logoContainer">
+          <!-- <img src="./images/logonobg.png" alt="Card Craft Studio Logo">-->  
+        </div>
     </div>
 
-
+    <!-- About Us Section -->
+    <div id="aboutUs">
+        <h2>About Us</h2>
+        <p>At Card Craft Studio, we specialize in creating custom, handcrafted greeting cards for every occasion. Each design is crafted with care and attention to detail, bringing a unique touch to your celebrations.</p>
+    </div>
+     <!-- Meet the Team Section -->
+     <div id="meetUs">
+        <h2>Meet the Team</h2>
+        <p>Team members...</p>
+    </div>
 </body>
 </html>
