--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         <h2>About Us</h2>
         <p>At Card Craft Studio, we specialize in creating custom, handcrafted greeting cards for every occasion. Each design is crafted with care and attention to detail, bringing a unique touch to your celebrations.</p>
     </div>
-     <!-- Meet the Team Section -->
-     <div id="meetUs">
-        <h2>Meet the Team</h2>
-        <p>Team members...</p>
+     <!-- Contact Us Section -->
+     <div id="contactUs">
+        <h2>Contact Us</h2>
+        <p>Location:</p>
+        <p></p>
+
     </div>
 </body>
 </html>
