updated home page

--- a/index.html
+++ b/index.html
@@ -10,24 +10,72 @@
     <div id="headerPlace">HEADER PLACE HOLDER</div>
 
     <!-- Main Section -->
-    <div id="firstSection">
+    <section id="firstSection" class="hero">
         <h1>CARDCRAFT STUDIO</h1>
         <div id="logoContainer">
-          <!-- <img src="./images/logonobg.png" alt="Card Craft Studio Logo">-->  
+            <!-- <img src="./images/logonobg.png" alt="Card Craft Studio Logo"> -->
         </div>
-    </div>
+        <p class="tagline">ADD TAG LINE</p>
+        <a href="#aboutUs" class="btn-primary">Learn More</a>
+    </section>
 
     <!-- About Us Section -->
-    <div id="aboutUs">
+    <section id="aboutUs" class="about">
         <h2>About Us</h2>
-        <p>At Card Craft Studio, we specialize in creating custom, handcrafted greeting cards for every occasion. Each design is crafted with care and attention to detail, bringing a unique touch to your celebrations.</p>
-    </div>
-     <!-- Contact Us Section -->
-     <div id="contactUs">
-        <h2>Contact Us</h2>
-        <p>Location:</p>
-        <p></p>
+        <p> A Christmas card-selling business that sells a variety of cards with a wide 
+            selection of designs to choose from. Sells digital cards as well as physical ones 
+            sending the digital ones through email. Physical cards can come with an envelope already
+            addressed to the North Pole! The data that will need to be stored is a card catalog with 
+            all the unique card designs. This will include both the physical and digital designs as well 
+            as an inventory amount for each item.</p>
+    </section>
 
-    </div>
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <h2>Our Work</h2>
+        <div class="gallery-container">
+            <div class="gallery-item"><img src="./images/cards3.png" alt="Sample Card 1"></div>
+            <div class="gallery-item"><img src="./images/cards3.png" alt="Sample Card 2"></div>
+            <div class="gallery-item"><img src="./images/cards3.png" alt="Sample Card 3"></div>
+            <div class="gallery-item"><img src="./images/cards3.png" alt="Sample Card 3"></div>
+            <div class="gallery-item"><img src="./images/cards3.png" alt="Sample Card 3"></div>
+
+            <!-- Add more images as needed -->
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="testimonials">
+        <h2>What Our Customers Say</h2>
+        <div class="testimonial">
+            <p>"Beautiful designs and top-notch quality! My go-to for unique cards!"</p>
+            <p>- Brandon P.</p>
+        </div>
+        <div class="testimonial">
+            <p>"CardCraft Studio’s cards are perfect for every occasion. Highly recommended!"</p>
+            <p>- Tony S.</p>
+        </div>
+        <!-- Add more testimonials as needed -->
+    </section>
+
+    <!-- Contact Us Section -->
+    <section id="contactUs" class="contact">
+        <h2>Contact Us</h2>
+        <p><strong>Location:</strong> 200 Manor Ave, Langhorne, PA 19047</p>
+        <p><strong>Email:</strong> info@cardcraftstudio.com</p>
+        <p><strong>Phone:</strong> (555) 123-4567</p>
+        
+       <!--  <p>For inquiries, please fill out our <a href="#contactForm">contact form</a>.</p> -->
+    </section>
+
+    <!-- Footer -->
+    <!-- <footer>
+        <p>&copy; 2024 CardCraft Studio. All rights reserved.</p>
+        <div class="social-media">
+            <a href="#"><img src="./images/cards.png" alt="Facebook"></a>
+            <a href="#"><img src="./images/icon-instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="./images/icon-twitter.png" alt="Twitter"></a>
+        </div>
+    </footer> -->
 </body>
 </html>
