added more styling and snow effect

--- a/index.html
+++ b/index.html
@@ -17,7 +17,47 @@
         </div>
         <p class="tagline">ADD TAG LINE</p>
         <a href="#aboutUs" class="btn-primary">Learn More</a>
+        <!-- SNOWFLAKE EFFECT-->
+    <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+        <div class="snowflake">
+          <div class="inner">❄</div>
+        </div>
+      </div>
     </section>
+
 
     <!-- About Us Section -->
     <section id="aboutUs" class="about">
@@ -55,7 +95,6 @@
             <p>"CardCraft Studio’s cards are perfect for every occasion. Highly recommended!"</p>
             <p>- Tony S.</p>
         </div>
-        <!-- Add more testimonials as needed -->
     </section>
 
     <!-- Contact Us Section -->
@@ -65,17 +104,12 @@
         <p><strong>Email:</strong> info@cardcraftstudio.com</p>
         <p><strong>Phone:</strong> (555) 123-4567</p>
         
-       <!--  <p>For inquiries, please fill out our <a href="#contactForm">contact form</a>.</p> -->
     </section>
 
     <!-- Footer -->
-    <!-- <footer>
+    <footer>
         <p>&copy; 2024 CardCraft Studio. All rights reserved.</p>
-        <div class="social-media">
-            <a href="#"><img src="./images/cards.png" alt="Facebook"></a>
-            <a href="#"><img src="./images/icon-instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="./images/icon-twitter.png" alt="Twitter"></a>
-        </div>
-    </footer> -->
+    </footer>
+    
 </body>
 </html>
