--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <a href="#aboutUs"></a>
+    <a href="#headerPlace"></a>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
