--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
     <title>CardCraft Studio</title>
 </head>
 <body>
-    <div id="headerPlace">HEADER PLACE HOLDER</div>
-
+       <!-- Bootstrap CSS -->
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+          <!-- Header Section with Navbar -->
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">CardCraft Studio</a>
+              <img src="logonobg.png" width="104" >
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="search.html">Search</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="cart.html">Cart</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="User_Preferences.html">User</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     <!-- Main Section -->
     <section id="firstSection" class="hero">
         <h1>CARDCRAFT STUDIO</h1>
