--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">CardCraft Studio</a>
-              <img src="logonobg.png" width="104" >
+              <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="cart.html">Cart</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="User_Preferences.html">User</a>
+                    <a class="nav-link" href="User_Preferences/User_Preferences.html">User</a>
                   </li>
                 </ul>
               </div>
