--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <!-- Bootstrap CSS -->
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
           <!-- Header Section with Navbar -->
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg style="background-color: #bf9f78;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">CardCraft Studio</a>
               <img src="images/logonobg.png" width="70" >
