--- a/SearchPage/search.html
+++ b/SearchPage/search.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User-Preferences</title>
+    <title>Search Page</title>
 </head>
 <body>
-    <h1>User Page</h1>
+    <h1>Search Page</h1>
 </body>
 </html>
