--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="search.html">Search</a>
+                    <a class="nav-link" href="SearchPage/search.html">Search</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="cart.html">Cart</a>
+                    <a class="nav-link" href="CartPage/cart.html">Cart</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="User_Preferences/User_Preferences.html">User</a>
