--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">CardCraft Studio</a>
+        <a class="navbar-brand" href="#"></a>
         <img src="logonobg.png" width="104" >
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
