--- a/index.html
+++ b/index.html
@@ -81,23 +81,15 @@
     </section>
 
 
-    <!-- About Us Section -->
-    <section id="aboutUs" class="about">
-        <h2>About Us</h2>
-        <p> A Christmas card-selling business that sells a variety of cards with a wide 
-            selection of designs to choose from. Sells digital cards as well as physical ones 
-            sending the digital ones through email. Physical cards can come with an envelope already
-            addressed to the North Pole! The data that will need to be stored is a card catalog with 
-            all the unique card designs. This will include both the physical and digital designs as well 
-            as an inventory amount for each item.</p>
-    </section>
-
+    
     <!-- Gallery Section -->
     <section id="gallery" class="gallery">
         <h2>Our Work</h2>
         <div class="gallery-container">
             <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 1"></div>
             <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 2"></div>
+            <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 3"></div>
+            <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 3"></div>
             <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 3"></div>
             <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 3"></div>
             <div class="gallery-item"><img src="./images/cards1.png" alt="Sample Card 3"></div>
@@ -118,6 +110,17 @@
             <p>- Tony S.</p>
         </div>
     </section>
+    <!-- About Us Section -->
+    <section id="aboutUs" class="about">
+      <h2>About Us</h2>
+      <p> A Christmas card-selling business that sells a variety of cards with a wide 
+          selection of designs to choose from. Sells digital cards as well as physical ones 
+          sending the digital ones through email. Physical cards can come with an envelope already
+          addressed to the North Pole! The data that will need to be stored is a card catalog with 
+          all the unique card designs. This will include both the physical and digital designs as well 
+          as an inventory amount for each item.</p>
+  </section>
+
 
     <!-- Contact Us Section -->
     <section id="contactUs" class="contact">
