--- a/User_Preferences/User_Preferences.html
+++ b/User_Preferences/User_Preferences.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="http://localhost:3000/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="SearchPage/search.html">Search</a>
