Made the Log in page accessible
made a loop of pages to log in and a cookie that is created to make it work

--- a/Login/login_page.html
+++ b/Login/login_page.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" href="CartPage/cart.html">Cart</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="http://localhost:3000/User_Preferences/User_Preferences.php">User</a>
+                  <a class="nav-link"  href="http://localhost:3000/is_user_logged_in.php">User</a>
               </li>
           </ul>
       </div>
@@ -39,7 +39,7 @@
       <body>
         <h2>Login</h2>
         <div class="form__group field">
-          <form action="process_use_login.php" method="post" >
+          <form action="process_user_login.php" method="post" >
             <label class="form__label" for="username" >Username:</label>            
             <input class="form__field" type="text" name="username" id="username" required>
             <label class="form__label" for="username" >Password:</label>
