--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="CartPage/cart.html">Cart</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="User_Preferences/User_Preferences.html">User</a>
+                    <a class="nav-link" href="is_user_logged_in.php">User</a>
                   </li>
                 </ul>
               </div>
