--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 <body>
        <!-- Bootstrap CSS -->
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+       <style>
+        .custom-navbar {
+          background-color: #bf9f78; /* Background color for navbar */
+        }
+        .navbar-nav .nav-link {
+          color: #fff !important; /* White text for navbar links */
+        }
+        .navbar-nav .nav-link:hover {
+          color: #f0e6d2 !important; /* Lighter color on hover */
+        }
+        .navbar-nav .nav-link.active {
+          font-weight: bold;
+          text-decoration: underline;
+        }
+      </style>
+
           <!-- Header Section with Navbar -->
-          <nav class="navbar navbar-expand-lg style="background-color: #bf9f78;>
+          <nav class="navbar navbar-expand-lg>
             <div class="container-fluid">
               <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
