--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </style>
 
           <!-- Header Section with Navbar -->
-          <nav class="navbar navbar-expand-lg>
+          <nav class="navbar navbar-expand-lg custom-navbar">
             <div class="container-fluid">
               <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
