--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <!-- Header Section with Navbar -->
           <nav class="navbar navbar-expand-lg custom-navbar">
             <div class="container-fluid">
+              <a class="navbar-brand" href="#">CardCraft Studio</a>
               <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
