--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
           <!-- Header Section with Navbar -->
           <nav class="navbar navbar-expand-lg custom-navbar">
             <div class="container-fluid">
-              <a class="nav-link" href="#">CardCraft Studio</a>
               <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                  <li class="nav-item">
+                    <a class="nav-link">CardCraft Studio</a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
