--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         }
         .navbar-nav .nav-link.active {
           font-weight: bold;
+          text-align: right;
         }
+        
       </style>
 
           <!-- Header Section with Navbar -->
