--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
        <style>
         .custom-navbar {
-          background-color: #bf9f78; /* Background color for navbar */
+          background-color: #bf9f78;
         }
         .navbar-nav .nav-link {
-          color: #fff !important; /* White text for navbar links */
+          color: #fff !important;
         }
         .navbar-nav .nav-link:hover {
-          color: #f0e6d2 !important; /* Lighter color on hover */
+          color: #f0e6d2 !important;
         }
         .navbar-nav .nav-link.active {
           font-weight: bold;
-          text-align: right;
         }
         
       </style>
@@ -32,6 +31,7 @@
               <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                  <ul class="navbar-nav ms-auto"></ul>
                   <li class="nav-item">
                     <a class="nav-link">CardCraft Studio</a>
                   </li>
