--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <img src="images/logonobg.png" width="70" >
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                  <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ms-auto"></ul>
                   <li class="nav-item">
                     <a class="nav-link">CardCraft Studio</a>
