--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
               
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="images/home.png" width="30"></a>
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="images/home.png" width="25"></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="SearchPage/search.html">Search</a>
+                    <a class="nav-link" href="SearchPage/search.html"><img src="images/search.png" width="20"></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="CartPage/cart.html">Cart</a>
+                    <a class="nav-link" href="CartPage/cart.html"><img src="images/cart.png" width="20"></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="is_user_logged_in.php">User</a>
+                    <a class="nav-link" href="is_user_logged_in.php"><img src="images/user.png" width="20"></a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
-          
+
     <!-- Main Section -->
     <section id="firstSection" class="hero">
         <h1>CARDCRAFT STUDIO</h1>
