Removed Random Semicolon
Removed Semicolon from User_preferences

--- a/User_Preferences/User_Preferences.html
+++ b/User_Preferences/User_Preferences.html
@@ -81,7 +81,7 @@
                     <br>
                     <input type="submit" value="Submit">
                 </form>
-                <form action="http://localhost:3000/log_out_user.php">;
+                <form action="http://localhost:3000/log_out_user.php">
                 <input class="button" type="submit" value="Log Out" name="log_out">
                 </form>
             </div>
