added sample christmas cards

--- a/CatalogPage/catalog.html
+++ b/CatalogPage/catalog.html
@@ -23,19 +23,19 @@
 
   <section class="catalog">
     <div class="product-card">
-      <img src="/images/cards4.png" alt="Product 1">
+      <img src="/images/catalog/1.png" alt="Product 1">
       <h2>Product 1</h2>
       <p>A description of product 1 goes here.</p>
       <button>Add to Cart</button>
     </div>
     <div class="product-card">
-      <img src="/images/cards4.png" alt="Product 2">
+      <img src="/images/catalog/2.png" alt="Product 2">
       <h2>Product 2</h2>
       <p>A description of product 2 goes here.</p>
       <button>Add to Cart</button>
     </div>
     <div class="product-card">
-      <img src="/images/cards4.png" alt="Product 3">
+      <img src="/images/catalog/3.png" alt="Product 3">
       <h2>Product 3</h2>
       <p>A description of product 3 goes here.</p>
     <button>Add to Cart</button>
