updated home page

--- a/CatalogPage/catalog.html
+++ b/CatalogPage/catalog.html
@@ -7,10 +7,47 @@
   <link rel="stylesheet" href="catstyle.css">
 </head>
 <body>
-  <header>
-    <h1>PRODUCT CATALOG</h1>
-    <p>Explore our collection of amazing products.</p>
-  </header>
+ <!-- <?php include 'header.php'; ?> -->
+<!-- SNOWFLAKE EFFECT-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+  <div class="snowflake">
+    <div class="inner">❄</div>
+  </div>
+</div>
+    <h1>PRODUCT CATALOG</h1>  
 
     <!-- Side navigation bar -->
     <nav class="sidebar">
