--- a/CatalogPage/catalog.html
+++ b/CatalogPage/catalog.html
@@ -66,7 +66,7 @@
               Search
             </button>
         </li>
-                <form action="a_search.php" method="get">
+                <form action="a_search.php" method="get" class="formstyle">
             <div>
             <li>  <select id="color" name="color"></li>
                     <option value="">Select Color</option> <!--This will be determined by the main bg color of the card-->
