changed styling for catalog page and added items to csv

--- a/CatalogPage/catalog.html
+++ b/CatalogPage/catalog.html
@@ -76,6 +76,8 @@
                     <option value="blue">Blue</option>
                     <option value="tan">Tan</option>
                     <option value="pink">Pink</option>
+                    <option value="black">Black</option>
+
         
                 </select>
 
